fix price sorter label alignment

--- a/css/controls.css
+++ b/css/controls.css
@@ -47,7 +47,7 @@
         left: -45px;
     }
     &.price-sorter {
-        width: 40px;
+        width: 46px;
     }
 }
 .dropdown {
